Criado components sidenav

--- a/BlogTravelWebApp/src/app/app.component.html
+++ b/BlogTravelWebApp/src/app/app.component.html
@@ -1,4 +1,6 @@
 
+<app-head-bar [style.xs]="{display: 'none'}" [style.sm]="{display: 'none'}"></app-head-bar> 
 
-<app-login-page></app-login-page>
+<app-sidenav-menu [style.md]="{display: 'none'}" [style.lg]="{display: 'none'}" [style.xl]="{display: 'none'}"></app-sidenav-menu>
 
+<!-- <app-login-page></app-login-page>  -->
