--- a/BlogTravelWebApp/src/app/app.component.html
+++ b/BlogTravelWebApp/src/app/app.component.html
@@ -1,6 +1,10 @@
 
-<app-head-bar [style.xs]="{display: 'none'}" [style.sm]="{display: 'none'}"></app-head-bar> 
+<!-- <app-head-bar [style.xs]="{display: 'none'}" [style.sm]="{display: 'none'}"></app-head-bar> 
 
 <app-sidenav-menu [style.md]="{display: 'none'}" [style.lg]="{display: 'none'}" [style.xl]="{display: 'none'}"></app-sidenav-menu>
 
+<app-post-web-page [style.xs]="{display: 'none'}" [style.sm]="{display: 'none'}"></app-post-web-page> -->
+
 <!-- <app-login-page></app-login-page>  -->
+
+<router-outlet></router-outlet>
