[+] Authenticate login and logout

--- a/BlogTravelWebApp/src/app/components/shared/head-bar/components/sub-menu/sub-menu.component.html
+++ b/BlogTravelWebApp/src/app/components/shared/head-bar/components/sub-menu/sub-menu.component.html
@@ -11,4 +11,5 @@
      &nbsp;&nbsp;
      <button md-icon-button (click)="filtro = ''"><md-icon style="color:#fff" *ngIf="filtro">close</md-icon></button>
   </div>
+  <button md-button class="sub-menu" (click)="logout()">Sair</button>
 </div>
