--- a/BlogTravelWebApp/src/app/components/shared/head-bar/components/sub-menu/sub-menu.component.css
+++ b/BlogTravelWebApp/src/app/components/shared/head-bar/components/sub-menu/sub-menu.component.css
@@ -1,5 +1,3 @@
-
-
 .sub-menu {
     color: #fff;
     text-transform: uppercase;
@@ -7,12 +5,14 @@
 }
 
 md-input-container label {
-  color: red !important;
+    color: red !important;
 }
 
+
 /* When the input is focused */
+
 md-input-container.md-input-focused label {
-  color: white !important;
+    color: white !important;
 }
 
 .input-pesquisa {
@@ -22,7 +22,8 @@ md-input-container.md-input-focused label {
     padding: 0;
     background-color: transparent;
     outline: none;
-    border-bottom-color: rgba(255, 255, 255, 0.82);;
+    border-bottom-color: rgba(255, 255, 255, 0.82);
+    ;
     border-top: none;
     border-left: none;
     border-right: none;
@@ -31,22 +32,36 @@ md-input-container.md-input-focused label {
 .txt-input-pesquisa {
     font-size: 16px;
     font-weight: 400;
-    color: #fff;  
+    color: #fff;
     padding: 2px 0;
 }
 
 ::-webkit-input-placeholder {
-   color: #fff;
+    color: #fff;
 }
 
-:-moz-placeholder { /* Firefox 18- */
-   color: #fff;  
+:-moz-placeholder {
+    /* Firefox 18- */
+    color: #fff;
 }
 
-::-moz-placeholder {  /* Firefox 19+ */
-   color: #fff;  
+::-moz-placeholder {
+    /* Firefox 19+ */
+    color: #fff;
 }
 
-:-ms-input-placeholder {  
-   color: #fff;  
+:-ms-input-placeholder {
+    color: #fff;
+}
+
+.btn-menu-item {
+    font-size: 13px;
+    right: 2px;
+}
+
+.icon-menu-item {
+    width: 10px;
+    font-size: 18px;
+    line-height: 21px;
+    color: #5a5858;
 }
