--- a/BlogTravelWebApp/src/app/components/shared/head-bar/head-bar.component.html
+++ b/BlogTravelWebApp/src/app/components/shared/head-bar/head-bar.component.html
@@ -1,3 +1,3 @@
-<div class="nav-bar">
-    <app-sub-menu></app-sub-menu>
+<div fxLayout="row" fxFlex="100" class="nav-bar">
+        <app-sub-menu style="width: 100%;"></app-sub-menu>
 </div>
