--- a/BlogTravelWebApp/src/app/pages/login-page/login-page.component.html
+++ b/BlogTravelWebApp/src/app/pages/login-page/login-page.component.html
@@ -1,6 +1,7 @@
 <form [formGroup]="form">
-  <div fxLayout="row" fxFlex="100" fxLayoutAlign="center center" class="color-touch" style="background: -webkit-gradient(linear, left top, right top, from(#ffffff), to(rgba(0, 0, 0, 0.13))) no-repeat !important; 
-    background: -moz-linear-gradient(top, #ffffff, rgba(0, 0, 0, 0.13));">
+  <div fxLayout="row" fxFlex="100" fxLayoutAlign="center center" class="color-touch" 
+        style="background: -webkit-gradient(linear, left top, right top, from(#ffffff), to(rgba(0, 0, 0, 0.13))) no-repeat !important; 
+        background: -moz-linear-gradient(top, #ffffff, rgba(0, 0, 0, 0.13));">
     <md-card fxFlex.gt-sm="40" fxFlex.gt-md="20" fxFlex="100" class="card-login">
       <md-card-header>
         <md-card-title>
