--- a/BlogTravelWebApp/src/app/pages/home/components/info-cristian/info-cristian.component.html
+++ b/BlogTravelWebApp/src/app/pages/home/components/info-cristian/info-cristian.component.html
@@ -1,7 +1,9 @@
 <div fxLayout="row" fxLayoutAlign="start center" style="margin-bottom: 40px;padding-left: 40px;">
   <div fxFlex.sm="90" fxFlex.md="90" fxFlex.lg="80" fxFlex.xl="80">
     <div fxFlex style="margin-top: 20px;">
-      <div class="cristian"></div>
+      <div>
+          <img src="../../../../../assets/images/people/cristian-home.jpg"  class="cristian"/>
+      </div>
       <div class="desc">
         <a href="" class="name">
            Cristian <3 
