--- a/BlogTravelWebApp/src/app/pages/home/components/info-cristian/info-cristian.component.css
+++ b/BlogTravelWebApp/src/app/pages/home/components/info-cristian/info-cristian.component.css
@@ -2,7 +2,7 @@
     width: 110px;
     height: 110px;
     border-radius: 50%;
-    background: url(../../../../../assets/images/people/cristian-home.jpg) no-repeat center;
+    /* background: url(../../../../../assets/images/people/cristian-home.jpg) no-repeat center; */
     background-size: cover;
     float: left;
 }
