--- a/BlogTravelWebApp/src/app/pages/home/home.component.css
+++ b/BlogTravelWebApp/src/app/pages/home/home.component.css
@@ -1,8 +1,13 @@
 .body-post {
-    margin-top: 80px;
+    margin-top: 50px;
     margin-bottom: 20px;
 }
 
 
-
-
+.img-header {
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    width: 100%;
+    height: 50vh;
+}
